4-Third-Party-Tools/infra/my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mine
  namespace: default
  labels:
    app:  mine
spec:
  selector:
    matchLabels:
      app: mine
  replicas: 3
  template:
    metadata:
      labels:
        app:  mine
    spec:
      containers:
      - name:  webserver
        image:  griftir/section2:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8080
          name:  mine

      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: mine
  type: ClusterIP
  ports:
  - name: my-app-service
    protocol: TCP
    port: 8080
    targetPort: 8080
